syntax = "proto3";

package drive;

option go_package = "/";

import "google/protobuf/timestamp.proto";

service FileService {
  rpc UploadFile(stream UploadFileRequest) returns (UploadFileResponse);
  rpc FilesList(FilesListRequest) returns (FilesListResponse);
  rpc DownloadFile(DownloadFileRequest) returns (stream DownloadFileResponse);
}

message UploadFileRequest {
  string filename = 1;
  bytes chunk = 2;
}

message UploadFileResponse {
  string filename = 1;
  string id = 2;
  uint32 size = 3;
}

message FilesListRequest {}

message FilesListResponse {
  repeated FileInfo files = 1;
}

message FileInfo {
  string id = 1;
  string filename = 2;
  google.protobuf.Timestamp creation_date = 3;
  google.protobuf.Timestamp modification_date = 4;
}

message DownloadFileRequest {
  string filename = 1;
  string id = 2;
}

message DownloadFileResponse {
  string filename = 1;
  bytes chunk = 2;
}
